<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MSU Proximity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="servicemanage">Manage Location Service</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="serivce">Location Service is Currently: </string>
    <string name="regyes">STARTED</string>
    <string name="regno">STOPPED</string>
    <string name="dummy">dummy</string>
    <string name="reg">Start</string>
    <string name="unreg">Stop</string>
    <string name="local_service_started">Local Service Started</string>
    <string name="local_service_stopped">Local Service Stopped</string>
    <string name="local_service_label">Local Service</string>
    <string name="back">Back to Main Screen</string>
    <string name="title_activity_sparty_info">SpartyInfoActivity</string>
    <string name="sparty_info">When John Hannah became president of Michigan State College in 1941, he commissioned assistant professor of art Leonard D. Jungwirth to design a statue of an athletic Spartan warrior. Jungwirth sculpted a statue known simply as The Spartan, which soon gained the nickname of \"Sparty\". Though Jungwirth originally designed The Spartan as a bronze statue, it had to be cast in terra cotta due to World War II rationing of bronze.[2] The terra cotta statue stood on the banks of the Red Cedar River, until 2005, when the university replaced it with a bronze replica. The original Spartan was moved into the stadium, where it remains on display to this day. Source:http://en.wikipedia.org/wiki/Sparty#StatuesThe Jack Breslin Student Events Center is a multi-purpose arena at Michigan State University in East Lansing, Michigan. The arena opened in 1989, and is named for Jack Breslin, MSU alumnus, former athlete and administrator, who first began pushing for the arena in 1969. It is home to the Michigan State Spartans men\'s and women\'s basketball teams. Although it nominally contains 16,280 seats, the arena typically holds around 15,000 for most events depending on the floor or stage setup. The Breslin Center superseded Jenison Fieldhouse, which stands nearby.The Jack Breslin Student Events Center is a multi-purpose arena at Michigan State University in East Lansing, Michigan. The arena opened in 1989, and is named for Jack Breslin, MSU alumnus, former athlete and administrator, who first began pushing for the arena in 1969. It is home to the Michigan State Spartans men\'s and women\'s basketball teams. Although it nominally contains 16,280 seats, the arena typically holds around 15,000 for most events depending on the floor or stage setup. The Breslin Center superseded Jenison Fieldhouse, which stands nearby.</string>
    <string name="title_activity_breslin_info">BreslinInfoActivity</string>
    <string name="breslin_info">The Jack Breslin Student Events Center is a multi-purpose arena at Michigan State University in East Lansing, Michigan. The arena opened in 1989, and is named for Jack Breslin, MSU alumnus, former athlete and administrator, who first began pushing for the arena in 1969. It is home to the Michigan State Spartans men\'s and women\'s basketball teams. Although it nominally contains 16,280 seats, the arena typically holds around 15,000 for most events depending on the floor or stage setup. The Breslin Center superseded Jenison Fieldhouse, which stands nearby. Source:http://en.wikipedia.org/wiki/Breslin_Center</string>
    <string name="title_activity_beaumont_info">BeaumontInfoActivity</string>
    <string name="beaumont_info">The Beaumont Tower is a structure on the campus of Michigan State University, designed by the architectural firm of Donaldson and Meier and completed in 1928. The 104-foot-tall (32 m) tower marks the site of College Hall, the first building in America erected for instruction in scientific agriculture. The tower, designed in the Collegiate Gothic architectural style, features The Sower, an Art Deco bas-relief by sculptor Lee Lawrie (1922), with the inscription &quot;Whatsoever a Man Soweth&quot; (from Galatians 6:7). This serves as a tribute both to MSU\'s origins as an agricultural college and to the seminal nature of knowledge. Source:http://en.wikipedia.org/wiki/Beaumont_Tower</string>
    <string name="community_request">NOTIFICATION :) request</string>
    <string name="youre_at">You\'re at</string>
</resources>
